--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 512,
-   "id": "median-tower",
+   "id": "explicit-football",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "israeli-laptop",
+   "id": "answering-snapshot",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "operational-check",
+   "id": "private-eleven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "engaged-webcam",
+   "id": "polish-variable",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "matched-creature",
+   "id": "expensive-spell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +107,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 529,
+   "id": "prime-scanner",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line count: 2038853\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'line count: {permits_all.count()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 222,
-   "id": "another-membrane",
+   "id": "fossil-lesson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "exempt-scratch",
+   "id": "resistant-hormone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "powered-ideal",
+   "id": "hydraulic-boutique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "hydraulic-orbit",
+   "id": "handed-firmware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "scientific-theology",
+   "id": "focal-sodium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "undefined-classic",
+   "id": "competent-details",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "collect-concord",
+   "id": "strong-volleyball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "fatal-pasta",
+   "id": "internal-reporter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "primary-shanghai",
+   "id": "short-circle",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "direct-helena",
+   "id": "after-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "beginning-party",
+   "id": "nutritional-interview",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 477,
-   "id": "wanted-audit",
+   "id": "written-albany",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "ancient-killing",
+   "id": "universal-committee",
    "metadata": {
     "tags": []
    },
@@ -364,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "skilled-constant",
+   "id": "subsequent-basket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "square-expense",
+   "id": "friendly-turning",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "threatened-japan",
+   "id": "international-sailing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "supreme-interview",
+   "id": "christian-buddy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 478,
-   "id": "pacific-resort",
+   "id": "super-stanford",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "pretty-cannon",
+   "id": "reduced-companion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "august-living",
+   "id": "assisted-memorial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "common-basketball",
+   "id": "nonprofit-saturday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 484,
-   "id": "laughing-incidence",
+   "id": "removable-corner",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "neither-bicycle",
+   "id": "substantial-density",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 485,
-   "id": "consistent-recall",
+   "id": "consecutive-jimmy",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 486,
-   "id": "prompt-jefferson",
+   "id": "separated-constraint",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "objective-iceland",
+   "id": "statewide-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 435,
-   "id": "elder-scope",
+   "id": "identical-browse",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "ready-developer",
+   "id": "textile-meeting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 440,
-   "id": "blank-danger",
+   "id": "listed-house",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 513,
-   "id": "balanced-vertical",
+   "id": "mounted-portuguese",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "median-enemy",
+   "id": "pressed-mexico",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 446,
-   "id": "domestic-providence",
+   "id": "forward-genetics",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 488,
-   "id": "identified-coverage",
+   "id": "expensive-midnight",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "apparent-budapest",
+   "id": "military-youth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 456,
-   "id": "natural-flour",
+   "id": "excited-transfer",
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "nonprofit-blood",
+   "id": "textile-procedure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 457,
-   "id": "pressed-siemens",
+   "id": "according-fifty",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": 459,
-   "id": "fundamental-negative",
+   "id": "social-stand",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 516,
-   "id": "union-separation",
+   "id": "aquatic-moldova",
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "czech-ethics",
+   "id": "impossible-adventure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "above-commercial",
+   "id": "original-henry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "magnetic-medicine",
+   "id": "injured-station",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "frozen-bookmark",
+   "id": "antique-acoustic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 431,
-   "id": "public-abuse",
+   "id": "defined-refrigerator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "accepting-divorce",
+   "id": "english-processing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "gross-ecology",
+   "id": "effective-analysis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "nutritional-delaware",
+   "id": "optimum-concentrate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "thick-adventure",
+   "id": "outstanding-recording",
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "hidden-statement",
+   "id": "surprised-matter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "diagnostic-pilot",
+   "id": "healthy-demand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1602,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "social-pillow",
+   "id": "competitive-continuity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "protective-bracket",
+   "id": "senior-gnome",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "copyrighted-frequency",
+   "id": "coordinate-rwanda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "occupied-pakistan",
+   "id": "gothic-costa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "orange-video",
+   "id": "western-florence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "beautiful-corner",
+   "id": "passing-berkeley",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "controlled-athens",
+   "id": "daily-morris",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "confident-reach",
+   "id": "intense-academy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "therapeutic-strength",
+   "id": "fewer-princess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "primary-interface",
+   "id": "expressed-occupation",
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 524,
-   "id": "looking-breath",
+   "id": "occupied-underground",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 525,
-   "id": "pleasant-fleece",
+   "id": "vanilla-redhead",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 528,
-   "id": "proof-excess",
+   "id": "plastic-cardiff",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "documented-nigeria",
+   "id": "instant-consolidation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1904,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "indie-montreal",
+   "id": "boxed-mexico",
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "abandoned-anniversary",
+   "id": "focal-adult",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1946,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "id": "mathematical-delivery",
+   "id": "engaged-familiar",
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1998,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "verbal-census",
+   "id": "geological-belief",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1992,7 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "damaged-board",
+   "id": "hidden-alias",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 492,
-   "id": "electoral-presence",
+   "id": "norman-cisco",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2046,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "tired-definition",
+   "id": "discrete-lightweight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "id": "analyzed-cartridge",
+   "id": "prescribed-calibration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "administrative-japanese",
+   "id": "authentic-denver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2085,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "august-officer",
+   "id": "legitimate-fever",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2080,7 +2098,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "aggregate-contest",
+   "id": "informal-wisconsin",
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "copyrighted-company",
+   "id": "sitting-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2129,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 427,
-   "id": "attached-briefing",
+   "id": "english-browse",
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 428,
-   "id": "satisfactory-lawrence",
+   "id": "increased-moscow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2178,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "detailed-alias",
+   "id": "shared-minnesota",
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": 493,
-   "id": "provincial-nashville",
+   "id": "exact-bulgaria",
    "metadata": {},
    "outputs": [
     {
@@ -2256,7 +2274,7 @@
   {
    "cell_type": "code",
    "execution_count": 466,
-   "id": "reliable-burner",
+   "id": "editorial-steps",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,7 +2284,7 @@
   {
    "cell_type": "code",
    "execution_count": 470,
-   "id": "about-journey",
+   "id": "bulgarian-anthropology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2276,7 +2294,7 @@
   {
    "cell_type": "code",
    "execution_count": 495,
-   "id": "dated-particular",
+   "id": "cosmetic-moore",
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "better-marshall",
+   "id": "everyday-classic",
    "metadata": {},
    "outputs": [],
    "source": []
